fix some message action template mobile layout issues

--- a/springboard_advocacy/modules/sba_message_action/css/message-action-form-layouts.css
+++ b/springboard_advocacy/modules/sba_message_action/css/message-action-form-layouts.css
@@ -244,8 +244,13 @@ fieldset[id*="edit-sba-messages-message"]  input[name*="subject"] {
 }
 
 .user-form-vertical-right #right,
-.action-message-left #right{
+.action-message-left #right,
+.action-body-right #right {
     float: right;
+}
+
+.action-body-right #left {
+    margin-left: 0;
 }
 
 .user-form-vertical-right #left,
@@ -295,4 +300,10 @@ fieldset[id*="edit-sba-messages-message"]  input[name*="subject"] {
         padding-left: 0;
     }
 
+}
+
+@media (max-width: 767px) {
+    .action-body-right #left {
+        clear: both;
+    }
 }
